deploy/weychafe_microk8s/deployment.aurora-gov-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aurora-gov-deployment
  namespace: aurora-gov
  labels:
    app: aurora-gov
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: aurora-gov
  template:
    metadata:
      labels:
        app: aurora-gov
    spec:
      containers:
        - name: aurora-gov
          image: registry.weychafe.nicher.cl/aurora_gov:0
          resources:
            requests:
                cpu: "200m"
                memory: "256Mi"
                ephemeral-storage: "100Mi"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4000
              protocol: TCP
