deploy/weychafe_microk8s/service.aurora-gov-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: aurora-gov-service
    namespace: aurora-gov
spec:
    type: ClusterIP
    selector:
        app: aurora-gov
    ports:
    -   protocol: TCP
        port: 80
        targetPort: 4000
