deploy/weychafe_microk8s/ingress.aurora-gov-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aurora-gov-ingress
  namespace: aurora-gov
  annotations:
    cert-manager.io/cluster-issuer: aurora-gov-letsencrypt
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
spec:
  ingressClassName: public
  tls:
    - hosts:
        - gov.aurora.ong
      secretName: aurora-gov-tls
  rules:
    - host: gov.aurora.ong
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aurora-gov-service
                port:
                  number: 80
